Fix bug that made the images get out of place

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ body {
 
 .recipes-section {
     background-color: #5555;
-    width: 90%;
+    width: 95%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 5em;
@@ -104,8 +104,8 @@ body {
 }
 
 .recipe_image img{
-    width: 700px;
-    height: 400px;
+    width: 650px;
+    height: 350px;
     object-fit: cover;
 }
 
